# django-app-template

./: cookiecutter.json  readme.md
{{cookiecutter.project_slug}}/: .env.localhost_pg  Dockerfile  Dockerfile-dev  Dockerfile-prod  README.md  app_build.bsh  app_build.cmd  compose-enable-ports.yml  compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/app/: Procfile  celery-entrypoint.sh  entrypoint.sh  gunicorn.conf.py  prometheus-cleanup.sh
{{cookiecutter.project_slug}}/app/src/core/: settings.py  urls.py  {{ 'celery.py' if cookiecutter.use_celery == 'y' else '' }}
