[project]
name = "{{ cookiecutter.project_name.lower().replace(' ', '-').replace('_', '-') }}"
version = "0.0.1"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    {name = "Michał Rutkowski", email = "homeend@wp.pl"},
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "django==5.1.4",
    "django-environ==0.11.2",
    "django-structlog==9.0.0",
{% if cookiecutter.use_django_tasks == "y" %}
    "django-tasks>=0.6.1",
{% endif %}
    "honcho>=2.0.0",
    "structlog>=24.4.0",
    "whitenoise==6.8.2",
    "more-itertools==10.6.0",
{% if cookiecutter.use_rest_framework == "y" %}
    "drf-yasg>=1.21.10",
    "djangorestframework>=3.16.0",
{% endif %}
    "psycopg2-binary>=2.9.10",
    "arrow>=1.3.0",
{% if cookiecutter.use_prometheus == "y" %}
    "prometheus-client>=0.22.0",
    "django-prometheus>=2.3.1",
{% endif %}
{% if cookiecutter.use_business_metrics == "y" %}
    "django-business-metrics>=1.0.1",
{% endif %}
{% if cookiecutter.use_health_check == "y" %}
    "django-health-check>=3.18.3",
    "psutil>=7.0.0",
{% endif %}
    "pydantic>=2.11.4",
{% if cookiecutter.use_django_extensions == "y" %}
    "django-extensions>=4.1",
{% endif %}
{% if cookiecutter.use_wait_for_database == "y" %}
    "django-probes>=1.7.0",
{% endif %}
{% if cookiecutter.use_celery == "y" %}
{% if cookiecutter.use_celery_beat == "y" %}
    "django-celery-beat>=2.8.1",
{% endif %}
    "redis>=6.1.0",
{% endif %}
    "uvicorn[standard]>=0.34.2",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "assertpy>=1.1",
{% if cookiecutter.use_pytest == "y" %}
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
{% endif %}
{% if cookiecutter.use_time_machine == "y" %}
    "time-machine>=2.16.0",
{% endif %}
]

{% if cookiecutter.add_black_settings == "y" %}
[tool.black]
line-length = 120
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \._build
  | buck-out
  | build
  | dist
  # Add this line to exclude all migration directories
  | migrations
  # Or, if you want to be more specific to only Python files within migrations:
  # | .*/migrations/.*\.py
)/
'''
{% endif %}
